--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
     "web3": "^1.3.5",
-    "zksync": "beta"
+    "zksync": "^0.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
