--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@nuxtjs/sentry": "latest",
     "@nuxtjs/toast": "latest",
     "@walletconnect/web3-provider": "^1.3.6",
+    "bnc-onboard": "^1.32.0",
     "ethereum-blockies-base64": "latest",
     "ethers": "5.1.3",
     "lottie-web": "^5.7.8",
