ci(firebase): Google Action workflows updated
— added 2 new host (ropsten-beta & rinkeby-stage)
— configured .env-files
— adopted package.json run-commands
— fixed issue w/t the rinkeby-beta zkScan link (it was broken)
— all flows improved (pretty sure there were mistakes)

BREAKING CHANGE: ```yarn dev``` now is binded with ropsten-beta when called localy

Closes #ZKF-867

--- a/.firebaserc
+++ b/.firebaserc
@@ -22,6 +22,9 @@
         ],
         "dev-mainnet": [
           "mainnet-wallet-zksync"
+        ],
+        "ropsten-beta": [
+          "ropsten-beta-wallet-zksync"
         ]
       }
     },
