--- a/environments/.env.ropsten-beta
+++ b/environments/.env.ropsten-beta
@@ -4,9 +4,9 @@ APP_FORTMATIC=pk_test_6CCD7EB1D7A9D0DB
 APP_PORTIS=68099bdc-3de9-4adc-ace0-e4664c1e77b4
 APP_ALCHEMY_API_KEY=72b13ae588b44eb9bc04c571bf22c984
 APP_WS_API_ETHERSCAN_TOKEN=FTKI6X11ZGTQ9J1KZ6WIRQ2ZW8EYZ8Y7FC
-APP_CURRENT_NETWORK=rinkeby
+APP_CURRENT_NETWORK=ropsten
 SENTRY_DSN=https://674c7230d4594037bc1a9797339aa831@o496053.ingest.sentry.io/5662609
 GTAG_ID=GTM-P9S4QSF
-ZK_SPECIAL_API="rinkeby-beta-api.zksync.io"
-ZK_SPECIAL_SCAN="https://rinkeby-beta-scan.zksync.dev"
-ZK_NETWORK="rinkeby-beta"
+ZK_SPECIAL_API="ropsten-beta-api.zksync.io"
+ZK_SPECIAL_SCAN="https://ropsten-beta-scan.zksync.dev"
+ZK_NETWORK="ropsten-beta"
