--- a/.prettierignore
+++ b/.prettierignore
@@ -1,12 +1,11 @@
-node_modules/*
-cypress/*
-.nuxt/*
-src/static/
-.github/*
-.idea/*
-environments/*
-public/*
-_nuxt/*
-src/static/sw.js
-tests/*
-*.example
+node_modules
+.nuxt
+src/static
+.firebase
+.github
+.idea
+*yarn*
+environments
+public
+tests
+*.sh
