--- a/package.json
+++ b/package.json
@@ -156,7 +156,7 @@
   ],
   "scripts": {
     "local": "sh ./cli-process-env.sh 'rinkeby' 'dev' 1 1",
-    "dev": "yarn ci:build:ropsten-beta && nuxt",
+    "dev": "yarn ci:build:rinkeby && nuxt",
     "generate": "nuxt generate ",
     "start": "yarn local && nuxt start",
     "build": "yarn local && nuxt build",
