--- a/.github/workflows/firebase-prod.yml
+++ b/.github/workflows/firebase-prod.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: bash cli-dev.sh ci && yarn install --immutable
+        run: bash cli-dev.sh ci
 
       - name: Build mainnet
         run: yarn ci:build:prod
