--- a/package.json
+++ b/package.json
@@ -58,17 +58,16 @@
   "dependencies": {
     "@ethersproject/logger": "^5.0.9",
     "@ethersproject/units": "5.3.0",
-    "@matterlabs/zk-wallet-onboarding": "1.18.6",
     "@nuxt/http": "latest",
     "@nuxt/typescript-build": "latest",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
     "@nuxtjs/toast": "latest",
-    "@walletconnect/web3-provider": "^1.3.6",
     "bnc-onboard": "^1.33.0",
+    "bnc-sdk": "^3.4.1",
     "ethereum-blockies-base64": "latest",
-    "ethers": "5.1.3",
+    "ethers": "^5.4.4",
     "lottie-web": "^5.7.8",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
@@ -81,15 +80,16 @@
     "vue-qrcode": "latest",
     "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
-    "web3": "^1.3.5",
-    "zksync": "beta"
+    "web3": "^1.5.1",
+    "web3-core": "^1.5.1",
+    "zksync": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.9",
     "@babel/runtime": "^7.13.10",
     "@ethersproject/logger": "^5.1.0",
-    "@ethersproject/providers": "^5.1.0",
+    "@ethersproject/providers": "^5.4.3",
     "@inkline/nuxt": "^2.3.6",
     "@nuxt/types": "latest",
     "@nuxt/typescript": "latest",
@@ -112,7 +112,6 @@
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "jest": "^26.6.3",
     "node-sass": "4.14.0",
-    "postcss": "latest",
     "prettier": "^2.2.1",
     "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
@@ -122,7 +121,6 @@
     "typescript": "^4.2.4",
     "vue-property-decorator": "latest",
     "vuex": "^3.6.2",
-    "web3-core": "^1.3.5",
     "webpack": "^4.46.0"
   },
   "peerDependencies": {
