feature(onboard): New onboarding library implementation finals
— merged with the beta branch (CI & Deployment)
— fee fixes
— tsconfig fixes
— data-cy attributes merged

BREAKING CHANGE: Multiple extra processing added, event handling changed, account methods changed

Closes ZKF-691
Closes ZKF-685
Closes ZKF-602
Closes ZKF-589
Closes ZKF-553
Closes ZKF-865

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,18 +38,21 @@
       "@nuxt/http",
       "@types/jest",
       "@nuxtjs/toast",
-      "typed-vuex",
-      "btn-onboard"
+      "web3-core/types",
+      "@inkline/inkline/types",
+      "btn-onboard",
+      "nuxt-typed-vuex",
+      "typed-vuex"
     ]
   },
   "exclude": [
-    "node_modules",
-    "dist",
-    ".yarn",
-    "public",
-    ".nuxt",
-    ".github",
-    "environments",
-    "tests"
+    "node_modules/*",
+    "dist/*",
+    ".yarn/*",
+    "public/*",
+    ".nuxt/*",
+    ".github/*",
+    "environments/*",
+    "tests/*"
   ]
 }
