--- a/package.json
+++ b/package.json
@@ -59,13 +59,12 @@
     "@ethersproject/logger": "^5.0.9",
     "@ethersproject/units": "5.3.0",
     "@nuxt/http": "latest",
-    "@nuxt/typescript-build": "latest",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
     "@nuxtjs/toast": "latest",
+    "@walletconnect/web3-provider": "^1.5.5",
     "bnc-onboard": "^1.33.0",
-    "bnc-sdk": "^3.4.1",
     "ethereum-blockies-base64": "latest",
     "ethers": "^5.4.4",
     "lottie-web": "^5.7.8",
@@ -81,18 +80,16 @@
     "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
     "web3": "^1.5.1",
-    "web3-core": "^1.5.1",
     "zksync": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.9",
     "@babel/runtime": "^7.13.10",
-    "@ethersproject/logger": "^5.1.0",
-    "@ethersproject/providers": "^5.4.3",
     "@inkline/nuxt": "^2.3.6",
     "@nuxt/types": "latest",
     "@nuxt/typescript": "latest",
+    "@nuxt/typescript-build": "latest",
     "@nuxtjs/dotenv": "latest",
     "@nuxtjs/eslint-config-typescript": "latest",
     "@nuxtjs/google-fonts": "latest",
@@ -121,6 +118,7 @@
     "typescript": "^4.2.4",
     "vue-property-decorator": "latest",
     "vuex": "^3.6.2",
+    "web3-core": "^1.5.1",
     "webpack": "^4.46.0"
   },
   "peerDependencies": {
@@ -161,10 +159,12 @@
     "ci:build:dev-rinkeby": "sh cli-process-env.sh 'rinkeby' dev 1 && yarn generate --fail-on-error",
     "ci:build:dev-mainnet": "sh cli-process-env.sh 'mainnet' dev 1 && yarn generate --fail-on-error",
     "ci:build:rinkeby-beta": "yarn ci:prepare:rinkeby-beta && yarn generate --fail-on-error",
+    "ci:build:ropsten-beta": "yarn ci:prepare:ropsten-beta && yarn generate --fail-on-error",
     "ci:build:prod": "yarn ci:prepare:mainnet && yarn generate --fail-on-error",
     "ci:build:rinkeby": "yarn ci:prepare:rinkeby && yarn generate --fail-on-error",
     "ci:build:ropsten": "yarn ci:prepare:ropsten && yarn generate --fail-on-error",
     "ci:prepare:rinkeby-beta": "sh cli-process-env.sh 'rinkeby-beta' dev 1",
+    "ci:prepare:ropsten-beta": "sh cli-process-env.sh 'ropsten-beta' dev 1",
     "ci:prepare:rinkeby": "sh cli-process-env.sh 'rinkeby' prod 1",
     "ci:prepare:ropsten": "sh cli-process-env.sh 'ropsten' prod 1",
     "ci:prepare:mainnet": "sh cli-process-env.sh 'mainnet' prod 1",
