ci(workflow): configuration for 4 workflows according to the task ZKF-913
BREAKING CHANGE: Push to the dev branch will update the testnet (but same time push to master should update testnets as well).

Closes ZKF-913

--- a/.firebaserc
+++ b/.firebaserc
@@ -8,21 +8,21 @@
         "beta-rinkeby": [
           "beta-rinkeby-zksync-vue"
         ],
+        "beta-ropsten": [
+          "ropsten-beta-wallet-zksync"
+        ]
         "prod-rinkeby": [
           "zksync-vue-rinkeby-2"
         ],
         "prod-ropsten": [
           "zksync-vue-ropsten"
         ],
-        "dev-rinkeby": [
-          "rinkeby-wallet-zksync"
-        ],
         "stage-mainnet": [
           "zksync-vue"
         ],
         "dev-mainnet": [
           "mainnet-wallet-zksync"
-        ]
+        ],
       }
     },
     "zksync-vue-mainnet": {
