--- a/.github/workflows/firebase-beta.yml
+++ b/.github/workflows/firebase-beta.yml
@@ -22,7 +22,6 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
           target: beta-rinkeby
           projectId: zksync-vue
-          channelID: live
 
       - name: "Deploying ropsten-beta [beta]"
         run: yarn run ci:build:ropsten-beta
@@ -30,6 +29,5 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
-          target: ropsten-beta
+          target: beta-ropsten
           projectId: zksync-vue
-          channelID: live
