--- a/.github/workflows/firebase-pr.yml
+++ b/.github/workflows/firebase-pr.yml
@@ -39,7 +39,7 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
           projectId: zksync-vue
-          target: ropsten-beta
+          target: beta-ropsten
 
       - name: "Build mainnet"
         run: yarn run ci:build:mainnet
