--- a/.firebaserc
+++ b/.firebaserc
@@ -5,9 +5,6 @@
   "targets": {
     "zksync-vue": {
       "hosting": {
-        "beta-rinkeby": [
-          "beta-rinkeby-zksync-vue"
-        ],
         "prod-rinkeby": [
           "zksync-vue-rinkeby-2"
         ],
@@ -25,6 +22,9 @@
         ],
         "ropsten-beta": [
           "ropsten-beta-wallet-zksync"
+        ],
+        "rinkeby-beta": [
+          "beta-rinkeby-zksync-vue"
         ]
       }
     },
