--- a/.github/workflows/firebase-beta.yml
+++ b/.github/workflows/firebase-beta.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
-          target: beta-rinkeby
+          target: rinkeby-beta
           projectId: zksync-vue
           channelID: live
 
