--- a/.github/workflows/firebase-pr.yml
+++ b/.github/workflows/firebase-pr.yml
@@ -42,10 +42,10 @@ jobs:
           target: ropsten-beta
 
       - name: "Build mainnet"
-        run: yarn run ci:build:mainnet
+        run: yarn run ci:build:prod
       - uses: matter-labs/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE_MAINNET }}'
           projectId: zksync-vue-mainnet
           target: mainnet
