--- a/firebase.json
+++ b/firebase.json
@@ -16,21 +16,6 @@
       ]
     },
     {
-      "target": "dev-mainnet",
-      "public": "public",
-      "ignore": [
-        "firebase.json",
-        "**/.*",
-        "**/node_modules/**"
-      ],
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ]
-    },
-    {
       "target": "prod-ropsten",
       "public": "public",
       "ignore": [
@@ -76,7 +61,7 @@
       ]
     },
     {
-      "target": "beta-rinkeby",
+      "target": "rinkeby-beta",
       "public": "public",
       "ignore": [
         "firebase.json",
