ci(firebase): Updating the CI
- dropped beta-support for the preview-flow (only rinkeby & ropsten left)
- Prod flow loses testnet deployments
- tesnets deployment is exploded into separate config (to run on push into dev & master into the ```firebase-testnets``` flow
— Manual triggering added for the testnets
— channelID breaking change reverted

Refs ZKF-913

--- a/.github/workflows/firebase-beta.yml
+++ b/.github/workflows/firebase-beta.yml
@@ -22,6 +22,7 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
           target: rinkeby-beta
           projectId: zksync-vue
+          channelID: live
 
       - name: "Build ropsten-beta [beta]"
         run: yarn run ci:build:ropsten-beta
@@ -31,3 +32,4 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
           target: ropsten-beta
           projectId: zksync-vue
+          channelID: live
