--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
       "url": "https://opensource.org/licenses/apache2.0.php"
     }
   ],
-  "version": "2.4.2",
+  "version": "2.5.0",
   "homepage": "https://wallet.zksync.io",
   "description": "zkWallet was created to unleash the power of zkSync L2 operations and give anyone an access to L2 zkSync features on mainnet",
   "repository": "https://github.com/matter-labs/zksync-wallet-vue",
@@ -58,7 +58,7 @@
   "dependencies": {
     "@ethersproject/logger": "^5.0.9",
     "@ethersproject/units": "5.3.0",
-    "@matterlabs/zk-wallet-onboarding": "1.18.6",
+    "@matterlabs/zk-wallet-onboarding": "^1.18.6",
     "@nuxt/http": "latest",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
@@ -67,7 +67,7 @@
     "@walletconnect/web3-provider": "^1.3.6",
     "bnc-onboard": "^1.32.0",
     "ethereum-blockies-base64": "latest",
-    "ethers": "5.1.3",
+    "ethers": "^5.1.3",
     "lottie-web": "^5.7.8",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
