--- a/.github/workflows/firebase-pr.yml
+++ b/.github/workflows/firebase-pr.yml
@@ -17,6 +17,7 @@ jobs:
       - name: "Build rinkeby"
         run: yarn run ci:build:rinkeby
       - uses: matter-labs/action-hosting-deploy@v0
+        id: rinkeby_deploy
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
@@ -32,3 +33,46 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
           projectId: zksync-vue
           target: prod-ropsten
+
+  testing:
+    needs: build_and_preview
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
+      - name: Checkout zksync-test-ui repository
+        uses: actions/checkout@v2
+        with:
+          repository: matter-labs/zksync-test-ui
+          ref: master
+          token: ${{ secrets.TEST_ACCESS_TOKEN }}
+      
+      - name: Install dependencies
+        run: |
+          bash ./cli-dev.sh clean yarn
+          yarn install --immutable || true
+
+      # this is needed to run chromium (puppeteer / dappeteer) with metamask extension.
+      - name: Install setup-node
+        uses: actions/setup-node@v1
+        env:
+          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
+        with:
+          args: install
+
+      - name: Launch tests
+        uses: mujo-code/puppeteer-headful@8baa091f83c74d2eda8603b7f9990b20535e7a9c
+        env:
+          CI: 'true'
+          TEST_HOST: "${{fromJson(needs.build_and_preview.outputs.rinkeby_urls)[0]}}"
+        with:
+          args: yarn test --runInBand
+
+      - name: Save artifacts
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: wallet-artifacts_${{ github.run_number }}_${{ steps.date.outputs.date }}
+          path: artifacts/*
