--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "bnc-onboard": "^1.32.0",
     "ethereum-blockies-base64": "latest",
     "ethers": "^5.1.3",
+    "js-cache": "^1.0.3",
     "lottie-web": "^5.7.8",
+    "matter-dapp-ui": "link:../nuxt-ui",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
     "nuxt-build-optimisations": "latest",
@@ -81,7 +83,7 @@
     "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
     "web3": "^1.3.5",
-    "zksync": "beta"
+    "zksync": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
@@ -112,7 +114,6 @@
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "jest": "^26.6.3",
     "node-sass": "4.14.0",
-    "postcss": "latest",
     "prettier": "^2.2.1",
     "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
@@ -132,7 +133,8 @@
     "vuex": "3.5.1"
   },
   "resolutions": {
-    "babel-core": "7.0.0-bridge.0"
+    "babel-core": "7.0.0-bridge.0",
+    "@matterlabs/zksync-zkwallet-vue": "portal:/Users/jackhamer/Documents/Projects/matterlabs/wallet"
   },
   "fork-ts-checker": {
     "typescript": true
