feature(onboard): Integration of the btn-onboard update
— auth.ts renamed to the provider.ts
— dropped account.ts store
— moved account's name and zkscan_url features into provider.ts store
— index.d.ts re-created to assure correct linting
— fixed unsupported calls to getTokenPrice (moved try-catch to the called action)
— all linking to the accessor changed to fit provider

--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
     "stylelint": "latest",
-    "stylelint-config-standard": "latest",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-scss": "latest",
     "typescript": "^4.2.4",
     "vue-property-decorator": "latest",
