--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
       "dom",
       "es2019.object",
       "esnext",
-      "esnext.asynciterable"
+      "esnext.asynciterable",
     ],
     "module": "esnext",
     "moduleResolution": "node",
@@ -30,7 +30,7 @@
     "resolveJsonModule": true,
     "sourceMap": true,
     "strict": true,
-    "target": "ESNext",
+    "target": "esnext",
     "types": [
       "@types/node",
       "@nuxt/types",
@@ -43,16 +43,16 @@
       "btn-onboard",
       "nuxt-typed-vuex",
       "typed-vuex"
-    ]
+    ],
   },
   "exclude": [
-    "node_modules/*",
-    "dist/*",
-    ".yarn/*",
-    "public/*",
-    ".nuxt/*",
-    ".github/*",
-    "environments/*",
-    "tests/*"
+    "node_modules",
+    "dist",
+    ".yarn",
+    "public",
+    ".nuxt",
+    ".github",
+    "environments",
+    "tests"
   ]
 }
