--- a/package.json
+++ b/package.json
@@ -56,16 +56,16 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
-    "@ethersproject/logger": "^5.4.0",
-    "@ethersproject/units": "^5.4.0",
+    "@ethersproject/logger": "^5.0.9",
+    "@ethersproject/units": "5.3.0",
     "@nuxt/http": "latest",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
     "@nuxtjs/toast": "latest",
-    "bnc-onboard": "latest",
+    "bnc-onboard": "^1.34.1",
     "ethereum-blockies-base64": "latest",
-    "ethers": "^5.4.5",
+    "ethers": "^5.4.4",
     "lottie-web": "^5.7.8",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
