--- a/environments/.env.mainnet
+++ b/environments/.env.mainnet
@@ -1,5 +1,6 @@
 APP_ONBOARDING_APP_ID=c4b83f7e-9bea-40d8-ad61-539f800863ee
 APP_WALLET_CONNECT=72b13ae588b44eb9bc04c571bf22c984
+APP_WALLET_CONNECT_UNIVERSAL=72b13ae588b44eb9bc04c571bf22c984
 APP_FORTMATIC=pk_live_6B0C5E23B6D8FD3A
 APP_PORTIS=2de02c10-9d10-4626-99cb-b71ebedab5c6
 APP_ALCHEMY_API_KEY=72b13ae588b44eb9bc04c571bf22c984
