--- a/environments/.env.ropsten
+++ b/environments/.env.ropsten
@@ -1,5 +1,6 @@
 APP_ONBOARDING_APP_ID=c4b83f7e-9bea-40d8-ad61-539f800863ee
 APP_WALLET_CONNECT=72b13ae588b44eb9bc04c571bf22c984
+APP_WALLET_CONNECT_UNIVERSAL=72b13ae588b44eb9bc04c571bf22c984
 APP_FORTMATIC=pk_test_6CCD7EB1D7A9D0DB
 APP_PORTIS=68099bdc-3de9-4adc-ace0-e4664c1e77b4
 APP_ALCHEMY_API_KEY=72b13ae588b44eb9bc04c571bf22c984
