--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
       "url": "https://opensource.org/licenses/apache2.0.php"
     }
   ],
-  "version": "2.5.0",
+  "version": "2.5.1",
   "homepage": "https://wallet.zksync.io",
   "description": "zkWallet was created to unleash the power of zkSync L2 operations and give anyone an access to L2 zkSync features on mainnet",
   "repository": "https://github.com/matter-labs/zksync-wallet-vue",
@@ -56,16 +56,17 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
-    "@ethersproject/logger": "^5.0.9",
-    "@ethersproject/units": "5.3.0",
+    "@ethersproject/logger": "^5.4.0",
+    "@ethersproject/units": "^5.4.0",
     "@nuxt/http": "latest",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
     "@nuxtjs/toast": "latest",
+    "@walletconnect/web3-provider": "^1.6.5",
     "bnc-onboard": "^1.34.1",
     "ethereum-blockies-base64": "latest",
-    "ethers": "^5.4.4",
+    "ethers": "5.4.0",
     "lottie-web": "^5.7.8",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
