--- a/package.json
+++ b/package.json
@@ -56,17 +56,16 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
-    "@ethersproject/logger": "^5.4.0",
-    "@ethersproject/units": "^5.4.0",
     "@nuxt/http": "latest",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
     "@nuxtjs/toast": "latest",
-    "@walletconnect/web3-provider": "^1.6.5",
+    "@walletconnect/utils": "1.4.0",
+    "@walletconnect/web3-provider": "1.4.0",
+    "blockies-ts": "1.0.0",
     "bnc-onboard": "^1.34.1",
-    "ethereum-blockies-base64": "latest",
-    "ethers": "5.4.0",
+    "ethers": "5.0.32",
     "lottie-web": "^5.7.8",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
