--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -8,6 +8,12 @@
     ".eslintrc.js"
   ],
   "exclude": [
+    "node_modules",
+    ".nuxt",
+    ".idea",
+    ".ide-setup",
+    ".firebase",
+    ".github",
     "tests/*",
   ],
   "compilerOptions": {
