--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
       "dom",
       "es2019.object",
       "esnext",
-      "esnext.asynciterable",
+      "esnext.asynciterable"
     ],
     "module": "esnext",
     "moduleResolution": "node",
@@ -32,6 +32,7 @@
     "strict": true,
     "target": "esnext",
     "types": [
+      "@nuxtjs/toast/index",
       "@types/node",
       "@nuxt/types",
       "@nuxtjs/sentry",
@@ -42,8 +43,9 @@
       "@inkline/inkline/types",
       "btn-onboard",
       "nuxt-typed-vuex",
-      "typed-vuex"
-    ],
+      "typed-vuex",
+      "@walletconnect/types"
+    ]
   },
   "exclude": [
     "node_modules",
