chore(onboard): Wallet-connect was tweaked to at least work SOMEHOW + alongside of the walletConnect some changes were nessesary:
 — ```blockie``` was replaced with new and typed ```blockies-ts```
 — tiny change of the deposit screen to cut warning & simplify error processing method;
 — viewport was changed to non-scalable on mobile;
 — walleconnect packages were downgraded to v.1.4.0;
 — ethers & @ethersproject were downgraded to v.5.0.32;
 — more wallets were added:
 ```
     { walletName: "gnosis" },
     { walletName: "xdefi" },
     { walletName: "bitpie" },
     { walletName: "binance" },
     { walletName: "coinbase" },
```

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
       "dom",
       "es2019.object",
       "esnext",
-      "esnext.asynciterable",
+      "esnext.asynciterable"
     ],
     "module": "esnext",
     "moduleResolution": "node",
@@ -32,6 +32,7 @@
     "strict": true,
     "target": "esnext",
     "types": [
+      "@nuxtjs/toast/index",
       "@types/node",
       "@nuxt/types",
       "@nuxtjs/sentry",
@@ -43,7 +44,7 @@
       "btn-onboard",
       "nuxt-typed-vuex",
       "typed-vuex"
-    ],
+    ]
   },
   "exclude": [
     "node_modules",
