chore(onboard): Wallet-connect was tweaked to at least work SOMEHOW + alongside of the walletConnect some changes were nessesary:
 — ```blockie``` was replaced with new and typed ```blockies-ts```
 — tiny change of the deposit screen to cut warning & simplify error processing method;
 — viewport was changed to non-scalable on mobile;
 — walleconnect packages were downgraded to v.1.4.0;
 — ethers & @ethersproject were downgraded to v.5.0.32;
 — more wallets were added:
 ```
     { walletName: "gnosis" },
     { walletName: "xdefi" },
     { walletName: "bitpie" },
     { walletName: "binance" },
     { walletName: "coinbase" },
```
— .... badabum!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,8 @@
       "@inkline/inkline/types",
       "btn-onboard",
       "nuxt-typed-vuex",
-      "typed-vuex"
+      "typed-vuex",
+      "@walletconnect/types"
     ]
   },
   "exclude": [
