chore(nuxt): Minor nuxt fixes:
 - Global directive added `v-click-outside`
 - loader.vue renamed as wrong named component
 - styleint rule `font-weight-notation` ignored
 - static/sw.js ignored from eslint

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -8,13 +8,14 @@
     ".eslintrc.js"
   ],
   "exclude": [
-    "node_modules",
-    ".nuxt",
-    ".idea",
-    ".ide-setup",
-    ".firebase",
-    ".github",
-    "tests/*",
+    "**sw.js",
+    "node_modules**",
+    ".nuxt**",
+    ".idea**",
+    ".ide-setup**",
+    ".firebase**",
+    ".github**",
+    "tests**"
   ],
   "compilerOptions": {
     "lib": [
