--- a/package.json
+++ b/package.json
@@ -150,8 +150,8 @@
     "yarn spell-check"
   ],
   "scripts": {
-    "local": "sh ./cli-process-env.sh 'ropsten-beta' 'dev' 1 1",
-    "dev": "yarn ci:build:rinkeby && nuxt",
+    "local": "sh ./cli-process-env.sh 'mainnet' 'dev' 1 1",
+    "dev": "yarn local && nuxt",
     "generate": "nuxt generate ",
     "start": "yarn local && nuxt start",
     "build": "yarn local && nuxt build",
