--- a/package.json
+++ b/package.json
@@ -58,25 +58,21 @@
   "dependencies": {
     "@ethersproject/logger": "^5.0.9",
     "@ethersproject/units": "5.3.0",
-    "@matterlabs/zk-wallet-onboarding": "^1.18.6",
-    "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/toast": "latest",
     "@walletconnect/web3-provider": "^1.3.6",
     "bnc-onboard": "^1.32.0",
-    "ethereum-blockies-base64": "latest",
+    "ethereum-blockies-base64": "1.0.2",
     "ethers": "^5.1.3",
     "js-cache": "^1.0.3",
     "lottie-web": "^5.7.8",
     "matter-dapp-ui": "link:../nuxt-ui",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
-    "nuxt-build-optimisations": "latest",
     "nuxt-typed-vuex": "latest",
     "oh-vue-icons": "^0.4.3",
     "typed-vuex": "latest",
     "vue": "2.*",
-    "vue-class-component": "latest",
     "vue-qrcode": "latest",
     "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
@@ -119,7 +115,6 @@
     "stylelint-config-standard": "latest",
     "stylelint-scss": "latest",
     "typescript": "^4.2.4",
-    "vue-property-decorator": "latest",
     "vuex": "^3.6.2",
     "web3-core": "^1.3.5",
     "webpack": "^4.46.0"
