--- a/package.json
+++ b/package.json
@@ -60,15 +60,11 @@
     "@ethersproject/units": "5.3.0",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/toast": "latest",
-    "@walletconnect/web3-provider": "^1.3.6",
-    "bnc-onboard": "^1.32.0",
     "ethereum-blockies-base64": "1.0.2",
     "ethers": "^5.1.3",
-    "js-cache": "^1.0.3",
     "lottie-web": "^5.7.8",
-    "matter-dapp-ui": "link:../nuxt-ui",
+    "matter-dapp-module": "^1.0.0",
     "moment-timezone": "^0.5.33",
-    "multiformats": "^9.4.7",
     "nuxt": "latest",
     "nuxt-typed-vuex": "latest",
     "oh-vue-icons": "^0.4.3",
