--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -7,13 +7,7 @@ packageExtensions:
   "@nuxt/typescript-build@*":
     peerDependencies:
       webpack: "*"
-  "@portis/web3@*":
-    peerDependencies:
-      "@babel/core": "*"
   jest@*:
-    peerDependencies:
-      "@babel/core": "*"
-  web3-provider-engine@*:
     peerDependencies:
       "@babel/core": "*"
 
@@ -21,4 +15,4 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
     spec: "@yarnpkg/plugin-version"
 
-yarnPath: .yarn/releases/yarn-berry.cjs
+yarnPath: .yarn/releases/yarn-2.4.2.cjs
