--- a/package.json
+++ b/package.json
@@ -56,32 +56,32 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
-    "@ethersproject/logger": "^5.0.9",
-    "@ethersproject/units": "5.3.0",
+    "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
+    "@nuxtjs/sentry": "latest",
     "@nuxtjs/toast": "latest",
-    "ethereum-blockies-base64": "1.0.2",
+    "blockies-ts": "1.0.0",
     "ethers": "^5.1.3",
     "lottie-web": "^5.7.8",
     "matter-dapp-module": "^1.0.6",
     "moment-timezone": "^0.5.33",
+    "multiformats": "^9.4.7",
     "nuxt": "latest",
+    "nuxt-build-optimisations": "latest",
     "nuxt-typed-vuex": "latest",
-    "oh-vue-icons": "^0.4.3",
+    "oh-vue-icons": "^0.4.7",
     "typed-vuex": "latest",
     "vue": "2.*",
+    "vue-class-component": "latest",
     "vue-qrcode": "latest",
-    "vue-router": "^3.5.1",
+    "vue-router": "^3.5.2",
     "vue-scrollto": "^2.20.0",
-    "web3": "^1.3.5",
     "zksync": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.9",
     "@babel/runtime": "^7.13.10",
-    "@ethersproject/logger": "^5.1.0",
-    "@ethersproject/providers": "^5.1.0",
     "@inkline/nuxt": "^2.3.6",
     "@nuxt/types": "latest",
     "@nuxt/typescript": "latest",
@@ -112,8 +112,8 @@
     "stylelint-config-standard": "latest",
     "stylelint-scss": "latest",
     "typescript": "^4.2.4",
+    "vue-property-decorator": "latest",
     "vuex": "^3.6.2",
-    "web3-core": "^1.3.5",
     "webpack": "^4.46.0"
   },
   "peerDependencies": {
@@ -130,6 +130,7 @@
     "typescript": true
   },
   "optionalDependencies": {
+    "@sentry/webpack-plugin": "^1.14.0",
     "fs-extra": "^9.1.0",
     "fsevents": "^2.3.2"
   },
@@ -170,5 +171,6 @@
     "lint-style:check": "stylelint --config .stylelintrc --ignore-path .stylelintignore --quiet",
     "lint-style:fix": "stylelint src/**/*.scss --config '.stylelintrc' --fix -f verbose",
     "spell-check": "cspell -c .cspell.json src/**/*.{ts,vue,js} *.md"
-  }
+  },
+  "packageManager": "yarn@2.4.2"
 }
