chore(config): Configs aligned with master branch

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,12 +1,16 @@
-node_modules/*
-cypress/*
-.nuxt/*
-src/static/
-.github/*
-.idea/*
-environments/*
-public/*
-_nuxt/*
+node_modules
+.nuxt
+src/static
+.firebase
+.github
+.idea
+*yarn*
+environments
+_nuxt
 src/static/sw.js
 tests/*
 *.example
+node_modules/*
+public
+tests
+*.sh
