--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -8,7 +8,14 @@
     ".eslintrc.js"
   ],
   "exclude": [
-    "tests/*",
+    "**sw.js",
+    "node_modules**",
+    ".nuxt**",
+    ".idea**",
+    ".ide-setup**",
+    ".firebase**",
+    ".github**",
+    "tests**"
   ],
   "compilerOptions": {
     "lib": [
