fix(sentry): Sentry DSN added to the .env

--- a/environments/.env.mainnet
+++ b/environments/.env.mainnet
@@ -3,5 +3,6 @@ APP_ONBOARDING_APP_ID=c4b83f7e-9bea-40d8-ad61-539f800863ee
 APP_FORTMATIC=pk_live_6B0C5E23B6D8FD3A
 APP_PORTIS=2de02c10-9d10-4626-99cb-b71ebedab5c6
 APP_CURRENT_NETWORK=mainnet
+SENTRY_DSN=https://674c7230d4594037bc1a9797339aa831@o496053.ingest.sentry.io/5662609
 GTAG_ID=GTM-P9S4QSF
 ZK_NETWORK="mainnet"
