--- a/environments/.env.ropsten-beta
+++ b/environments/.env.ropsten-beta
@@ -3,5 +3,6 @@ APP_ONBOARDING_APP_ID=c4b83f7e-9bea-40d8-ad61-539f800863ee
 APP_FORTMATIC=pk_test_6CCD7EB1D7A9D0DB
 APP_PORTIS=68099bdc-3de9-4adc-ace0-e4664c1e77b4
 APP_CURRENT_NETWORK=ropsten
+SENTRY_DSN=https://674c7230d4594037bc1a9797339aa831@o496053.ingest.sentry.io/5662609
 GTAG_ID=GTM-P9S4QSF
 ZK_NETWORK="ropsten-beta"
