--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "title": "zkSync.io Wallet | Try solution for the Ethereum scalability\n with zero security compromises",
   "main": "nuxt.config.ts",
   "types": [
-    "src/types/index.d.ts",
-    "src/types/lib.d.ts"
+    "src/types/index.d.ts"
   ],
   "files": [
     "src/types",
@@ -63,7 +62,7 @@
     "blockies-ts": "1.0.0",
     "ethers": "^5.1.3",
     "lottie-web": "^5.7.8",
-    "matter-dapp-module": "^1.0.12",
+    "matter-dapp-module": "^1.0.13",
     "moment-timezone": "^0.5.33",
     "multiformats": "^9.4.7",
     "nuxt": "latest",
