--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "blockies-ts": "1.0.0",
     "ethers": "^5.1.3",
     "lottie-web": "^5.7.8",
-    "matter-dapp-module": "^1.0.18",
+    "matter-dapp-module": "^1.0.19",
     "moment-timezone": "^0.5.33",
     "multiformats": "^9.4.7",
     "nuxt": "latest",
@@ -75,7 +75,7 @@
     "vue-qrcode": "latest",
     "vue-router": "^3.5.2",
     "vue-scrollto": "^2.20.0",
-    "zksync": "latest"
+    "zksync": "beta"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
