--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "jest": "^26.6.3",
     "node-sass": "4.14.0",
+    "nuxt-purgecss": "^1.0.0",
     "prettier": "^2.2.1",
     "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
@@ -146,7 +147,7 @@
     "yarn spell-check"
   ],
   "scripts": {
-    "local": "sh ./cli-process-env.sh 'rinkeby-beta' 'dev' 1 1",
+    "local": "sh ./cli-process-env.sh 'rinkeby-beta' 'prod' 1 1",
     "dev": "yarn local && nuxt",
     "generate": "nuxt generate ",
     "start": "yarn local && nuxt start",
