build(dApp): .editorconfig regenerated & firebase freshed  * .editorconfig was unified & regenerated from the IDE-settings  * .eslintignore unified & merged

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,29 +1,17 @@
+.husky
+.ide-setup
+.idea
+.nuxt
+.yarn
+environments
 node_modules
-cypress/*
-.nuxt/*
-src/static/*
-.github/*
-.idea/*
-environments/*
-public/*
-_nuxt/*
-src/static/sw.js
-.eslintrc.js
-tests/*
-*.example
-fonts/**
-src/assets/imgs/*
-.github/*
-.idea/*
-environments/*
-public/*
-src/static/sw.js
-*.css
-*.eot
-*.svg
-*.ttf
-*.woff
-*.woff2
-successCheckmark.json
-**sw.js
-src/static/sw.js
+public
+tests
+
+## src-exceptions
+src/assets/imgs
+.github/workflows
+.github/ISSUE_TEMPLATE
+src/locales
+**/sw.js
+**/*.svg
