chore(package): Global reconfiguration  * `cspell` dictionary updated  * CHANGELOG.md and `*.scss` files linted and fixed  * husky configured  * yarn upgraded to 3.*  * yarn typescript plugin installed  * Sentry mixin renamed (miss-spelling fixed)  * `oh-vue-icons` reinstalled with the composition-api  * packages rebuild  * eslint / ts / nuxt / yarn / stylelint / babel reconfigured

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -2,28 +2,7 @@
   // extend your base config so you don't have to redefine your compilerOptions
   "extends": "./tsconfig.json",
   "include": [
-    "**/*.ts",
-    "**/*.vue",
-    "**/*.js",
-    ".eslintrc.js"
+    "**/*.{ts,vue,js}",
+    "nuxt.config.ts",
   ],
-  "exclude": [
-    "**sw.js",
-    "node_modules**",
-    ".nuxt**",
-    ".idea**",
-    ".ide-setup**",
-    ".firebase**",
-    ".github**",
-    "tests**"
-  ],
-  "compilerOptions": {
-    "lib": [
-      "es2019",
-      "es2019.object",
-      "esnext",
-      "esnext.asynciterable",
-      "dom"
-    ]
-  }
 }
