--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,13 +6,18 @@
     "stylelint-scss"
   ],
   "rules": {
-    "at-rule-no-unknown": false,
+    "at-rule-no-unknown": [
+      true,
+      {
+        "severity": "notice"
+      }
+    ],
     "block-no-empty": null,
     "block-opening-brace-newline-after": "always",
     "color-named": "never",
-    "custom-property-empty-line-before": false,
+    "custom-property-empty-line-before": "never",
     "declaration-block-semicolon-newline-after": "always",
-    "declaration-block-trailing-semicolon": false,
+    "declaration-block-trailing-semicolon": "never",
     "font-family-name-quotes": "always-where-recommended",
     "font-weight-notation": null,
     "function-url-quotes": "always",
@@ -23,7 +28,7 @@
       }
     ],
     "no-descending-specificity": null,
-    "no-duplicate-selectors": "never",
+    "no-duplicate-selectors": null,
     "no-empty-source": [
       true,
       {
@@ -42,7 +47,7 @@
     ],
     "scss/at-rule-no-unknown": true,
     "selector-attribute-quotes": "always",
-    "selector-max-specificity": false,
+    "selector-max-specificity": null,
     "selector-pseudo-class-no-unknown": [
       true,
       {
@@ -52,7 +57,7 @@
         ]
       }
     ],
-    "selector-pseudo-element-colon-notation": "",
+    "selector-pseudo-element-colon-notation": "single",
     "selector-type-no-unknown": [
       true,
       {
@@ -63,6 +68,6 @@
     ],
     "string-quotes": "double",
     "value-list-comma-newline-before": "never-multi-line",
-    "value-no-vendor-prefix": false
+    "value-no-vendor-prefix": null
   }
 }
