--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,18 +1,7 @@
 nodeLinker: node-modules
 
-packageExtensions:
-  "@nuxt/types@*":
-    peerDependencies:
-      webpack: "*"
-  "@nuxt/typescript-build@*":
-    peerDependencies:
-      webpack: "*"
-  jest@*:
-    peerDependencies:
-      "@babel/core": "*"
-
 plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: "@yarnpkg/plugin-version"
+  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+    spec: "@yarnpkg/plugin-typescript"
 
-yarnPath: .yarn/releases/yarn-2.4.2.cjs
+yarnPath: .yarn/releases/yarn-berry.cjs
