--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "dapp",
     "ethers"
   ],
+  "engines": {
+    "node": "16"
+  },
   "license": "MIT",
   "licenses": [
     {
@@ -58,22 +61,18 @@
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
-    "@nuxtjs/toast": "latest",
     "blockies-ts": "1.0.0",
     "ethers": "^5.1.3",
     "lottie-web": "^5.7.8",
     "matter-dapp-module": "1.0.21",
     "moment-timezone": "^0.5.33",
-    "multiformats": "^9.4.7",
     "nuxt": "latest",
-    "nuxt-build-optimisations": "latest",
     "nuxt-typed-vuex": "latest",
-    "oh-vue-icons": "^0.4.7",
+    "oh-vue-icons": "latest",
     "typed-vuex": "latest",
     "vue": "2.*",
-    "vue-class-component": "latest",
-    "vue-qrcode": "0.4.0",
-    "vue-router": "^3.5.2",
+    "vue-qrcode": "^0.4.0",
+    "vue-router": "^3.5.3",
     "vue-scrollto": "^2.20.0",
     "zksync": "latest"
   },
@@ -81,35 +80,36 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.9",
     "@babel/runtime": "^7.13.10",
+    "@ethersproject/logger": "^5.5.0",
     "@inkline/nuxt": "^2.3.6",
     "@nuxt/types": "latest",
     "@nuxt/typescript": "latest",
     "@nuxt/typescript-build": "latest",
+    "@nuxtjs/composition-api": "^0.29.3",
     "@nuxtjs/dotenv": "latest",
     "@nuxtjs/eslint-config-typescript": "latest",
     "@nuxtjs/google-fonts": "latest",
     "@nuxtjs/style-resources": "latest",
-    "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
+    "@vue/composition-api": "^1.2.4",
     "babel-core": "^7.0.0-bridge.0",
     "commitlint": "^11.0.0",
+    "consola": "^2.15.3",
     "cspell": "latest",
     "dotenv": "8.2.0",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-prettier-vue": "^2.1.1",
-    "eslint-plugin-vue": "^7.7.0",
+    "eslint-plugin-prettier-vue": "^3.1.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
-    "jest": "^26.6.3",
+    "husky": "^7.0.0",
     "node-sass": "4.14.0",
     "prettier": "^2.2.1",
-    "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
-    "stylelint": "latest",
-    "stylelint-config-standard": "latest",
-    "stylelint-scss": "latest",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-scss": "^3.19.0",
     "typescript": "4.2.4",
     "vue-property-decorator": "latest",
     "vuex": "^3.6.2",
@@ -118,8 +118,8 @@
   "peerDependencies": {
     "@babel/core": "*",
     "@babel/runtime": "*",
-    "typed-vuex": "*",
-    "vuex": "3.5.1"
+    "@ethersproject/logger": "*",
+    "typed-vuex": "*"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
@@ -128,24 +128,29 @@
     "typescript": true
   },
   "optionalDependencies": {
-    "@sentry/webpack-plugin": "^1.14.0",
-    "fs-extra": "^9.1.0",
+    "@sentry/webpack-plugin": "^1.18.3",
+    "fs-extra": "^10.0.0",
     "fsevents": "^2.3.2"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-fix",
+      "pre-commit": "lint-staged",
       "commit-msg": "commitlint --format -E HUSKY_GIT_PARAMS"
     }
   },
-  "lint-fix": [
-    "yarn lint-style:fix",
-    "yarn lint-ts:fix",
-    "yarn format:prettier",
-    "yarn spell-check"
-  ],
+  "lint-staged": {
+    "*.{scss}": [
+      "yarn format",
+      "yarn lint-style:fix"
+    ],
+    "*.{ts,tsx,vue}": [
+      "yarn format",
+      "yarn lint-ts:fix",
+      "yarn spell-check"
+    ]
+  },
   "scripts": {
-    "local": "sh ./cli-process-env.sh 'rinkeby-beta' 'prod' 1 1",
+    "local": "sh ./cli-process-env.sh 'rinkeby' 'prod' 1 1",
     "dev": "yarn local && nuxt",
     "generate": "nuxt generate ",
     "start": "yarn local && nuxt start",
@@ -163,12 +168,13 @@
     "ci:prepare:ropsten": "sh cli-process-env.sh 'ropsten' prod 1",
     "ci:prepare:mainnet": "sh cli-process-env.sh 'mainnet' prod 1",
     "test": "jest",
-    "format:prettier": "prettier --config .prettierrc.js --ignore-path .prettierignore --write src/**/*.{ts,vue,js}",
-    "lint-ts:check": "eslint --quiet --config \".eslintrc.js\" ./src/**/*.{ts,vue,js}",
-    "lint-ts:fix": "eslint --fix --config \".eslintrc.js\" ./src/**/*.{ts,vue,js}",
-    "lint-style:check": "stylelint --config .stylelintrc --ignore-path .stylelintignore --quiet",
-    "lint-style:fix": "stylelint src/**/*.scss --config '.stylelintrc' --fix -f verbose",
-    "spell-check": "cspell -c .cspell.json src/**/*.{ts,vue,js} *.md"
+    "format": "prettier --config .prettierrc.js --ignore-path .prettierignore --write src/**/*.{ts,vue,js,scss}",
+    "lint-ts:check": "eslint --quiet --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js}",
+    "lint-ts:fix": "yarn lint-ts:check --fix",
+    "lint-style:check": "stylelint --config .stylelintrc --ignore-path .stylelintignore --quiet src/**/*.scss",
+    "lint-style:fix": "stylelint --config '.stylelintrc' --ignore-path .stylelintignore --fix src/**/*.scss",
+    "spell-check": "cspell -c .cspell.json src/**/*.{ts,vue,js,md}",
+    "prepare": "husky install"
   },
-  "packageManager": "yarn@2.4.2"
+  "packageManager": "yarn@3.1.0"
 }
