--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
+    "@matterlabs/zksync-nuxt-core": "^1.1.6",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
@@ -63,7 +64,6 @@
     "blockies-ts": "1.0.0",
     "ethers": "^5.1.3",
     "lottie-web": "^5.7.8",
-    "matter-dapp-module": "^1.0.29",
     "moment-timezone": "^0.5.33",
     "multiformats": "^9.4.7",
     "nuxt": "latest",
