refactor(dapp): full dapp review & optimization
1. dropped unused modules
2. reconfigured nuxt.config.js
3. updated dependencies
4. dropped toaster
5. added disconnect for the WalletConnect fixing
6. ci slightly simplified & enhanced: caching added

--- a/.github/workflows/firebase-pr.yml
+++ b/.github/workflows/firebase-pr.yml
@@ -12,7 +12,15 @@ jobs:
       output_urls: "${{ steps.preview_deploy.outputs.urls }}"
     steps:
       - uses: actions/checkout@v2
-      - run: bash cli-dev.sh ci && yarn run ci:build:rinkeby
+
+
+      - uses: c-hive/gha-yarn-cache@v2 # using cache
+
+      - name: "Install dependencies"
+        run: yarn install
+
+      - name: "Deploy preview"
+        run: yarn run ci:build:rinkeby
       - uses: matter-labs/action-hosting-deploy@v0
         id: preview_deploy
         with:
