feat: more fiat to crypto providers (#199)
* feat: more fiat to crypto providers

* feat: buy crypto with banxa

* chore: banxa integration via query url params

* feat: moonpay integration

* fix: moonpay only zksync currencies

* fix: moonpay prefill address

* fix: redirect to same domain after crypto purchase

* chore: move deposit fee to another component

* fix: disable banxa rinkeby

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@nuxtjs/eslint-config-typescript": "latest",
     "@nuxtjs/google-fonts": "latest",
     "@nuxtjs/style-resources": "latest",
+    "@types/crypto-js": "^4.0.2",
     "@types/jest": "^26.0.23",
     "@types/mixpanel-browser": "^2.35.8",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
